--- a/StudentMigrations.CRUD/appsettings.json
+++ b/StudentMigrations.CRUD/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-NHQQJ4V;Database=Students_20241016_1900;Integrated Security=SSPI;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
